# semantic-search-app

./: .gitignore  README.md  app.py  data.py  inference.py  model.py  pyproject.toml  requirements.txt  utils.py
